@@ -101,6 +101,9 @@ BUG FIXES
     o read_meme() will now properly parse background letter frequencies which
       span more than one line.
 
+    o convert_motifs() will not error-out when trying to convert a PFMatrix
+      with a family character vector longer than one.
+
 CHANGES IN VERSION 1.2.1
 ------------------------
 
